--- a/popup.html
+++ b/popup.html
@@ -3,11 +3,13 @@
 <head>
   <title>Netflix Timer</title>
 </head>
-<body>
-  <h2>Set Netflix Time Limit</h2>
-  <input id="timeInput" type="number" placeholder="Enter time in seconds" min="1" />
-  <button id="startButton">Start Timer</button>
-  <div id="remainingTime" style="margin-top: 10px; font-size: 16px; color: grey;">
+<body id="popupBody" style="margin: 0; width:280px; border-radius: 30px;">
+  <div style="display: flex; flex-direction: column; justify-content: center; align-items:center; gap: 10px">
+    <h2>Set <span id="websiteName"></span> Time Limit</h2>
+    <input id="timeInput" type="number" placeholder="Enter time in seconds" min="1" style="width: 150px" />
+    <button id="startButton">Start Timer</button>
+    <div id="remainingTime" style="margin-top: 10px; font-size: 16px; color: black;">
+    </div>
   </div>
   <script src="popup.js"></script>
 </body>
