--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Netflix Timer</title>
+  <title>Streaming Timer</title>
 </head>
 <body id="popupBody" style="margin: 0; width:280px; border-radius: 30px;">
   <div style="display: flex; flex-direction: column; justify-content: center; align-items:center; gap: 10px">
