--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,15 @@
 </head>
 <body id="popupBody" style="margin: 0; width:280px; border-radius: 30px;">
   <div style="display: flex; flex-direction: column; justify-content: center; align-items:center; gap: 10px">
+    <button id="closeButton" style="font-size: 10px;
+    height: 20px;
+    width: 20px;
+    border: none;
+    border-radius: 100%;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    cursor: pointer">X</button>
     <h2>Set <span id="websiteName"></span> Time Limit</h2>
     <input id="timeInput" type="number" placeholder="Enter time in seconds" min="1" style="width: 150px" />
     <button id="startButton">Start Timer</button>
