--- a/popup.html
+++ b/popup.html
@@ -17,8 +17,8 @@
     <h2>Set <span id="websiteName"></span> Time Limit</h2>
     <input id="timeInput" type="number" placeholder="Enter time in seconds" min="1" style="width: 150px" />
     <button id="startButton">Start Timer</button>
-    <div id="remainingTime" style="margin-top: 10px; font-size: 16px; color: black;">
-    </div>
+    <div id="remainingTime" style="margin-top: 10px; font-size: 16px; color: black;"></div>
+    <div id="cumulativeTime" style="margin-top: 10px; font-size: 16px; color: black;"></div>
   </div>
   <script src="popup.js"></script>
 </body>
